{
  "version": 4,
  "terraform_version": "1.8.4",
  "serial": 821,
  "lineage": "d6d3fa9b-f6e4-7453-ada9-fee042be2a50",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:542829982577:vpc/vpc-01f4d46470a373bd0",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0b4a7dda91b31a353",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-066f963d7801a5186",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01f4d46470a373bd0",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0ce00d29620d2a81a",
            "owner_id": "542829982577",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Project": "onedelivery"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:542829982577:internet-gateway/igw-0a0515cd57fcd23cf",
            "id": "igw-0a0515cd57fcd23cf",
            "owner_id": "542829982577",
            "tags": {
              "Name": "onedelivery-igw"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "onedelivery-igw",
              "Project": "onedelivery"
            },
            "vpc_id": "vpc-01f4d46470a373bd0"
          },
          "dependencies": [
            "data.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:542829982577:loadbalancer/app/onedelivery-alb/f7a5f07158f11d54",
            "arn_suffix": "app/onedelivery-alb/f7a5f07158f11d54",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "onedelivery-alb-870475991.ap-southeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:542829982577:loadbalancer/app/onedelivery-alb/f7a5f07158f11d54",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "onedelivery-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-00dce56cabff4d51e"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-086900f75d158bfe1"
              },
              {
                "subnet_id": "subnet-0bf8209152cea933c"
              },
              {
                "subnet_id": "subnet-0def3a3c74ef848e1"
              }
            ],
            "subnets": [
              "subnet-086900f75d158bfe1",
              "subnet-0bf8209152cea933c",
              "subnet-0def3a3c74ef848e1"
            ],
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Project": "onedelivery"
            },
            "vpc_id": "vpc-01f4d46470a373bd0",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1LMS91P8CMLE5"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_subnet.public_a",
            "aws_subnet.public_b",
            "aws_subnet.public_c",
            "data.aws_availability_zones.available",
            "data.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:542829982577:listener/app/onedelivery-alb/f7a5f07158f11d54/f5a5405ddfd1cf14",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "Not Found",
                    "status_code": "404"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:542829982577:listener/app/onedelivery-alb/f7a5f07158f11d54/f5a5405ddfd1cf14",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:542829982577:loadbalancer/app/onedelivery-alb/f7a5f07158f11d54",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Project": "onedelivery"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.main",
            "aws_security_group.alb",
            "aws_subnet.public_a",
            "aws_subnet.public_b",
            "aws_subnet.public_c",
            "data.aws_availability_zones.available",
            "data.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "audit",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:542829982577:targetgroup/onedelivery-audit/b6174ab7b453b4b7",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:542829982577:listener-rule/app/onedelivery-alb/f7a5f07158f11d54/f5a5405ddfd1cf14/3525fa233aa98b3d",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/audit",
                      "/audit/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:542829982577:listener-rule/app/onedelivery-alb/f7a5f07158f11d54/f5a5405ddfd1cf14/3525fa233aa98b3d",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:542829982577:listener/app/onedelivery-alb/f7a5f07158f11d54/f5a5405ddfd1cf14",
            "priority": 130,
            "tags": {},
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Project": "onedelivery"
            }
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.main",
            "aws_lb_listener.http",
            "aws_lb_target_group.service",
            "aws_security_group.alb",
            "aws_subnet.public_a",
            "aws_subnet.public_b",
            "aws_subnet.public_c",
            "data.aws_availability_zones.available",
            "data.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "guardian_agent",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:542829982577:targetgroup/onedelivery-guardian-agent/5b22e5d2af6d6008",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:542829982577:listener-rule/app/onedelivery-alb/f7a5f07158f11d54/f5a5405ddfd1cf14/52632316519d08ef",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/guardian-agent",
                      "/guardian-agent/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:542829982577:listener-rule/app/onedelivery-alb/f7a5f07158f11d54/f5a5405ddfd1cf14/52632316519d08ef",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:542829982577:listener/app/onedelivery-alb/f7a5f07158f11d54/f5a5405ddfd1cf14",
            "priority": 170,
            "tags": {},
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Project": "onedelivery"
            }
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.main",
            "aws_lb_listener.http",
            "aws_lb_target_group.service",
            "aws_security_group.alb",
            "aws_subnet.public_a",
            "aws_subnet.public_b",
            "aws_subnet.public_c",
            "data.aws_availability_zones.available",
            "data.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "incident",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:542829982577:targetgroup/onedelivery-incident/84ac3700c0da036c",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:542829982577:listener-rule/app/onedelivery-alb/f7a5f07158f11d54/f5a5405ddfd1cf14/062311761b9b740f",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/incident",
                      "/incident/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:542829982577:listener-rule/app/onedelivery-alb/f7a5f07158f11d54/f5a5405ddfd1cf14/062311761b9b740f",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:542829982577:listener/app/onedelivery-alb/f7a5f07158f11d54/f5a5405ddfd1cf14",
            "priority": 150,
            "tags": {},
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Project": "onedelivery"
            }
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.main",
            "aws_lb_listener.http",
            "aws_lb_target_group.service",
            "aws_security_group.alb",
            "aws_subnet.public_a",
            "aws_subnet.public_b",
            "aws_subnet.public_c",
            "data.aws_availability_zones.available",
            "data.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "knowledge",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:542829982577:targetgroup/onedelivery-knowledge/79de8967be7c2759",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:542829982577:listener-rule/app/onedelivery-alb/f7a5f07158f11d54/f5a5405ddfd1cf14/6220f4f39319975b",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/knowledge",
                      "/knowledge/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:542829982577:listener-rule/app/onedelivery-alb/f7a5f07158f11d54/f5a5405ddfd1cf14/6220f4f39319975b",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:542829982577:listener/app/onedelivery-alb/f7a5f07158f11d54/f5a5405ddfd1cf14",
            "priority": 155,
            "tags": {},
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Project": "onedelivery"
            }
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.main",
            "aws_lb_listener.http",
            "aws_lb_target_group.service",
            "aws_security_group.alb",
            "aws_subnet.public_a",
            "aws_subnet.public_b",
            "aws_subnet.public_c",
            "data.aws_availability_zones.available",
            "data.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "logistic_agent",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:542829982577:targetgroup/onedelivery-logistics-agent/6096dbcda3b65982",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:542829982577:listener-rule/app/onedelivery-alb/f7a5f07158f11d54/f5a5405ddfd1cf14/6d511f80ae71c6d2",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/logistics-agent",
                      "/logistics-agent/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:542829982577:listener-rule/app/onedelivery-alb/f7a5f07158f11d54/f5a5405ddfd1cf14/6d511f80ae71c6d2",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:542829982577:listener/app/onedelivery-alb/f7a5f07158f11d54/f5a5405ddfd1cf14",
            "priority": 180,
            "tags": {},
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Project": "onedelivery"
            }
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.main",
            "aws_lb_listener.http",
            "aws_lb_target_group.service",
            "aws_security_group.alb",
            "aws_subnet.public_a",
            "aws_subnet.public_b",
            "aws_subnet.public_c",
            "data.aws_availability_zones.available",
            "data.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "logistics",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:542829982577:targetgroup/onedelivery-logistics/5ef02fa854430d23",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:542829982577:listener-rule/app/onedelivery-alb/f7a5f07158f11d54/f5a5405ddfd1cf14/8230deffe454029d",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/logistics",
                      "/logistics/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:542829982577:listener-rule/app/onedelivery-alb/f7a5f07158f11d54/f5a5405ddfd1cf14/8230deffe454029d",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:542829982577:listener/app/onedelivery-alb/f7a5f07158f11d54/f5a5405ddfd1cf14",
            "priority": 110,
            "tags": {},
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Project": "onedelivery"
            }
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.main",
            "aws_lb_listener.http",
            "aws_lb_target_group.service",
            "aws_security_group.alb",
            "aws_subnet.public_a",
            "aws_subnet.public_b",
            "aws_subnet.public_c",
            "data.aws_availability_zones.available",
            "data.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "orchestrator_agent",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:542829982577:targetgroup/onedelivery-orchestrator-agent/c9c8cc688c70932b",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:542829982577:listener-rule/app/onedelivery-alb/f7a5f07158f11d54/f5a5405ddfd1cf14/4ff1e75690031eb9",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/orchestrator-agent",
                      "/orchestrator-agent/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:542829982577:listener-rule/app/onedelivery-alb/f7a5f07158f11d54/f5a5405ddfd1cf14/4ff1e75690031eb9",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:542829982577:listener/app/onedelivery-alb/f7a5f07158f11d54/f5a5405ddfd1cf14",
            "priority": 160,
            "tags": {},
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Project": "onedelivery"
            }
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.main",
            "aws_lb_listener.http",
            "aws_lb_target_group.service",
            "aws_security_group.alb",
            "aws_subnet.public_a",
            "aws_subnet.public_b",
            "aws_subnet.public_c",
            "data.aws_availability_zones.available",
            "data.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "order",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:542829982577:targetgroup/onedelivery-order/e510996a3ba7b791",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:542829982577:listener-rule/app/onedelivery-alb/f7a5f07158f11d54/f5a5405ddfd1cf14/8aa4b41bedc0afc3",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/order",
                      "/order/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:542829982577:listener-rule/app/onedelivery-alb/f7a5f07158f11d54/f5a5405ddfd1cf14/8aa4b41bedc0afc3",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:542829982577:listener/app/onedelivery-alb/f7a5f07158f11d54/f5a5405ddfd1cf14",
            "priority": 100,
            "tags": {},
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Project": "onedelivery"
            }
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.main",
            "aws_lb_listener.http",
            "aws_lb_target_group.service",
            "aws_security_group.alb",
            "aws_subnet.public_a",
            "aws_subnet.public_b",
            "aws_subnet.public_c",
            "data.aws_availability_zones.available",
            "data.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "payment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:542829982577:targetgroup/onedelivery-payment/94f4b550cf8660d6",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:542829982577:listener-rule/app/onedelivery-alb/f7a5f07158f11d54/f5a5405ddfd1cf14/b9516e79cb3326e9",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/payment",
                      "/payment/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:542829982577:listener-rule/app/onedelivery-alb/f7a5f07158f11d54/f5a5405ddfd1cf14/b9516e79cb3326e9",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:542829982577:listener/app/onedelivery-alb/f7a5f07158f11d54/f5a5405ddfd1cf14",
            "priority": 120,
            "tags": {},
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Project": "onedelivery"
            }
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.main",
            "aws_lb_listener.http",
            "aws_lb_target_group.service",
            "aws_security_group.alb",
            "aws_subnet.public_a",
            "aws_subnet.public_b",
            "aws_subnet.public_c",
            "data.aws_availability_zones.available",
            "data.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "qa_agent",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:542829982577:targetgroup/onedelivery-qa-agent/40ee319148472aed",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:542829982577:listener-rule/app/onedelivery-alb/f7a5f07158f11d54/f5a5405ddfd1cf14/53c0fa34357f505c",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/qa-agent",
                      "/qa-agent/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:542829982577:listener-rule/app/onedelivery-alb/f7a5f07158f11d54/f5a5405ddfd1cf14/53c0fa34357f505c",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:542829982577:listener/app/onedelivery-alb/f7a5f07158f11d54/f5a5405ddfd1cf14",
            "priority": 200,
            "tags": {},
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Project": "onedelivery"
            }
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.main",
            "aws_lb_listener.http",
            "aws_lb_target_group.service",
            "aws_security_group.alb",
            "aws_subnet.public_a",
            "aws_subnet.public_b",
            "aws_subnet.public_c",
            "data.aws_availability_zones.available",
            "data.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "user",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:542829982577:targetgroup/onedelivery-user/91cc8731d5c85aa8",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:542829982577:listener-rule/app/onedelivery-alb/f7a5f07158f11d54/f5a5405ddfd1cf14/47814a83ce68db50",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/user",
                      "/user/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:542829982577:listener-rule/app/onedelivery-alb/f7a5f07158f11d54/f5a5405ddfd1cf14/47814a83ce68db50",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:542829982577:listener/app/onedelivery-alb/f7a5f07158f11d54/f5a5405ddfd1cf14",
            "priority": 140,
            "tags": {},
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Project": "onedelivery"
            }
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.main",
            "aws_lb_listener.http",
            "aws_lb_target_group.service",
            "aws_security_group.alb",
            "aws_subnet.public_a",
            "aws_subnet.public_b",
            "aws_subnet.public_c",
            "data.aws_availability_zones.available",
            "data.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "service",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "audit",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:542829982577:targetgroup/onedelivery-audit/b6174ab7b453b4b7",
            "arn_suffix": "targetgroup/onedelivery-audit/b6174ab7b453b4b7",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:542829982577:targetgroup/onedelivery-audit/b6174ab7b453b4b7",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-southeast-1:542829982577:loadbalancer/app/onedelivery-alb/f7a5f07158f11d54"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "onedelivery-audit",
            "port": 9001,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Project": "onedelivery"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-01f4d46470a373bd0"
          },
          "dependencies": [
            "data.aws_vpc.main"
          ]
        },
        {
          "index_key": "guardian-agent",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:542829982577:targetgroup/onedelivery-guardian-agent/5b22e5d2af6d6008",
            "arn_suffix": "targetgroup/onedelivery-guardian-agent/5b22e5d2af6d6008",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:542829982577:targetgroup/onedelivery-guardian-agent/5b22e5d2af6d6008",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-southeast-1:542829982577:loadbalancer/app/onedelivery-alb/f7a5f07158f11d54"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "onedelivery-guardian-agent",
            "port": 9013,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Project": "onedelivery"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-01f4d46470a373bd0"
          },
          "dependencies": [
            "data.aws_vpc.main"
          ]
        },
        {
          "index_key": "incident",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:542829982577:targetgroup/onedelivery-incident/84ac3700c0da036c",
            "arn_suffix": "targetgroup/onedelivery-incident/84ac3700c0da036c",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:542829982577:targetgroup/onedelivery-incident/84ac3700c0da036c",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-southeast-1:542829982577:loadbalancer/app/onedelivery-alb/f7a5f07158f11d54"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "onedelivery-incident",
            "port": 9006,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Project": "onedelivery"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-01f4d46470a373bd0"
          },
          "dependencies": [
            "data.aws_vpc.main"
          ]
        },
        {
          "index_key": "knowledge",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:542829982577:targetgroup/onedelivery-knowledge/79de8967be7c2759",
            "arn_suffix": "targetgroup/onedelivery-knowledge/79de8967be7c2759",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:542829982577:targetgroup/onedelivery-knowledge/79de8967be7c2759",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-southeast-1:542829982577:loadbalancer/app/onedelivery-alb/f7a5f07158f11d54"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "onedelivery-knowledge",
            "port": 9007,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Project": "onedelivery"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-01f4d46470a373bd0"
          },
          "dependencies": [
            "data.aws_vpc.main"
          ]
        },
        {
          "index_key": "logistics",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:542829982577:targetgroup/onedelivery-logistics/5ef02fa854430d23",
            "arn_suffix": "targetgroup/onedelivery-logistics/5ef02fa854430d23",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:542829982577:targetgroup/onedelivery-logistics/5ef02fa854430d23",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-southeast-1:542829982577:loadbalancer/app/onedelivery-alb/f7a5f07158f11d54"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "onedelivery-logistics",
            "port": 9002,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Project": "onedelivery"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-01f4d46470a373bd0"
          },
          "dependencies": [
            "data.aws_vpc.main"
          ]
        },
        {
          "index_key": "logistics-agent",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:542829982577:targetgroup/onedelivery-logistics-agent/6096dbcda3b65982",
            "arn_suffix": "targetgroup/onedelivery-logistics-agent/6096dbcda3b65982",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:542829982577:targetgroup/onedelivery-logistics-agent/6096dbcda3b65982",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-southeast-1:542829982577:loadbalancer/app/onedelivery-alb/f7a5f07158f11d54"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "onedelivery-logistics-agent",
            "port": 9011,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Project": "onedelivery"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-01f4d46470a373bd0"
          },
          "dependencies": [
            "data.aws_vpc.main"
          ]
        },
        {
          "index_key": "orchestrator-agent",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:542829982577:targetgroup/onedelivery-orchestrator-agent/c9c8cc688c70932b",
            "arn_suffix": "targetgroup/onedelivery-orchestrator-agent/c9c8cc688c70932b",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:542829982577:targetgroup/onedelivery-orchestrator-agent/c9c8cc688c70932b",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-southeast-1:542829982577:loadbalancer/app/onedelivery-alb/f7a5f07158f11d54"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "onedelivery-orchestrator-agent",
            "port": 9010,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Project": "onedelivery"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-01f4d46470a373bd0"
          },
          "dependencies": [
            "data.aws_vpc.main"
          ]
        },
        {
          "index_key": "order",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:542829982577:targetgroup/onedelivery-order/e510996a3ba7b791",
            "arn_suffix": "targetgroup/onedelivery-order/e510996a3ba7b791",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:542829982577:targetgroup/onedelivery-order/e510996a3ba7b791",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-southeast-1:542829982577:loadbalancer/app/onedelivery-alb/f7a5f07158f11d54"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "onedelivery-order",
            "port": 9003,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Project": "onedelivery"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-01f4d46470a373bd0"
          },
          "dependencies": [
            "data.aws_vpc.main"
          ]
        },
        {
          "index_key": "payment",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:542829982577:targetgroup/onedelivery-payment/94f4b550cf8660d6",
            "arn_suffix": "targetgroup/onedelivery-payment/94f4b550cf8660d6",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:542829982577:targetgroup/onedelivery-payment/94f4b550cf8660d6",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-southeast-1:542829982577:loadbalancer/app/onedelivery-alb/f7a5f07158f11d54"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "onedelivery-payment",
            "port": 9004,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Project": "onedelivery"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-01f4d46470a373bd0"
          },
          "dependencies": [
            "data.aws_vpc.main"
          ]
        },
        {
          "index_key": "qa-agent",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:542829982577:targetgroup/onedelivery-qa-agent/40ee319148472aed",
            "arn_suffix": "targetgroup/onedelivery-qa-agent/40ee319148472aed",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:542829982577:targetgroup/onedelivery-qa-agent/40ee319148472aed",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-southeast-1:542829982577:loadbalancer/app/onedelivery-alb/f7a5f07158f11d54"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "onedelivery-qa-agent",
            "port": 9014,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Project": "onedelivery"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-01f4d46470a373bd0"
          },
          "dependencies": [
            "data.aws_vpc.main"
          ]
        },
        {
          "index_key": "user",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:542829982577:targetgroup/onedelivery-user/91cc8731d5c85aa8",
            "arn_suffix": "targetgroup/onedelivery-user/91cc8731d5c85aa8",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:542829982577:targetgroup/onedelivery-user/91cc8731d5c85aa8",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-southeast-1:542829982577:loadbalancer/app/onedelivery-alb/f7a5f07158f11d54"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "onedelivery-user",
            "port": 9005,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Project": "onedelivery"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-01f4d46470a373bd0"
          },
          "dependencies": [
            "data.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:542829982577:route-table/rtb-0402b81a861e67e72",
            "id": "rtb-0402b81a861e67e72",
            "owner_id": "542829982577",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a0515cd57fcd23cf",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "onedelivery-public-rt"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "onedelivery-public-rt",
              "Project": "onedelivery"
            },
            "timeouts": null,
            "vpc_id": "vpc-01f4d46470a373bd0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "data.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-092d656180564563c",
            "route_table_id": "rtb-0402b81a861e67e72",
            "subnet_id": "subnet-086900f75d158bfe1"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public_a",
            "data.aws_availability_zones.available",
            "data.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0022b29eb1c1313c4",
            "route_table_id": "rtb-0402b81a861e67e72",
            "subnet_id": "subnet-0def3a3c74ef848e1"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public_b",
            "data.aws_availability_zones.available",
            "data.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fa4ff2e7057383ab",
            "route_table_id": "rtb-0402b81a861e67e72",
            "subnet_id": "subnet-0bf8209152cea933c"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public_c",
            "data.aws_availability_zones.available",
            "data.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:542829982577:security-group/sg-00dce56cabff4d51e",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00dce56cabff4d51e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "onedelivery-alb-20260331072024838400000001",
            "name_prefix": "onedelivery-alb-",
            "owner_id": "542829982577",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Project": "onedelivery"
            },
            "timeouts": null,
            "vpc_id": "vpc-01f4d46470a373bd0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_tasks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:542829982577:security-group/sg-085cdd7377ff6d907",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-085cdd7377ff6d907",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "ALB",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00dce56cabff4d51e"
                ],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "onedelivery-ecs-20260301180734459200000004",
            "name_prefix": "onedelivery-ecs-",
            "owner_id": "542829982577",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Project": "onedelivery"
            },
            "timeouts": null,
            "vpc_id": "vpc-01f4d46470a373bd0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb",
            "data.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "postgres",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:542829982577:security-group/sg-093c6eebd827fa388",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-093c6eebd827fa388",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "ECS tasks",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-085cdd7377ff6d907"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "onedelivery-postgres-20260301180736238800000006",
            "name_prefix": "onedelivery-postgres-",
            "owner_id": "542829982577",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Project": "onedelivery"
            },
            "timeouts": null,
            "vpc_id": "vpc-01f4d46470a373bd0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.ecs_tasks",
            "data.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc_endpoints",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:542829982577:security-group/sg-0f53614ee2c55343e",
            "description": "VPC endpoint SG for onedelivery",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f53614ee2c55343e",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "onedelivery-vpc-ep-20260304173157471700000001",
            "name_prefix": "onedelivery-vpc-ep-",
            "owner_id": "542829982577",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Project": "onedelivery"
            },
            "timeouts": null,
            "vpc_id": "vpc-01f4d46470a373bd0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:542829982577:subnet/subnet-02dbf97957db59430",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.64.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02dbf97957db59430",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "542829982577",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "onedelivery-private-a"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "onedelivery-private-a",
              "Project": "onedelivery"
            },
            "vpc_id": "vpc-01f4d46470a373bd0"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:542829982577:subnet/subnet-0836a471bed800402",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.80.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0836a471bed800402",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "542829982577",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "onedelivery-private-b"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "onedelivery-private-b",
              "Project": "onedelivery"
            },
            "vpc_id": "vpc-01f4d46470a373bd0"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:542829982577:subnet/subnet-065bc6a293dd40b8d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.0.96.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-065bc6a293dd40b8d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "542829982577",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "onedelivery-private-c"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "onedelivery-private-c",
              "Project": "onedelivery"
            },
            "vpc_id": "vpc-01f4d46470a373bd0"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:542829982577:subnet/subnet-086900f75d158bfe1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-086900f75d158bfe1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "542829982577",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "onedelivery-public-a"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "onedelivery-public-a",
              "Project": "onedelivery"
            },
            "vpc_id": "vpc-01f4d46470a373bd0"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:542829982577:subnet/subnet-0def3a3c74ef848e1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0def3a3c74ef848e1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "542829982577",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "onedelivery-public-b"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "onedelivery-public-b",
              "Project": "onedelivery"
            },
            "vpc_id": "vpc-01f4d46470a373bd0"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:542829982577:subnet/subnet-0bf8209152cea933c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.0.32.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bf8209152cea933c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "542829982577",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "onedelivery-public-c"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "onedelivery-public-c",
              "Project": "onedelivery"
            },
            "vpc_id": "vpc-01f4d46470a373bd0"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.aws_vpc.main"
          ]
        }
      ]
    }
  ]
}